--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/rest_with_springboot_udemy?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=guilherme1
+spring.datasource.password=teste123
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
+#FlyWay
+flyway.url=jdbc:mysql://localhost:3306
+flyway.schemas=rest_with_spring_boot_udemy
+flyway.user=root
+flyway.password=teste123
