--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/rest_with_springboot_udemy?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/rest_with_spring_boot_udemy?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=teste123
 
@@ -9,7 +9,7 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
 #FlyWay
-flyway.url=jdbc:mysql://localhost:3306
+flyway.url==jdbc:mysql://localhost:3306
 flyway.schemas=rest_with_spring_boot_udemy
 flyway.user=root
 flyway.password=teste123
